fix for results on all listings not being sorted by date, styled scrollbar on chrome

--- a/static/css/sass/styles.scss
+++ b/static/css/sass/styles.scss
@@ -11,6 +11,21 @@ $tertiary-color: #6a7fdb;
     font-family: $main-font;
 }
 
+body::-webkit-scrollbar {
+    width: 6px;               /* width of the entire scrollbar */
+    position: relative;
+}
+  
+body::-webkit-scrollbar-track {
+    background: rgba(0, 0, 0, 0.2);        /* color of the tracking area */
+}
+  
+body::-webkit-scrollbar-thumb {
+    background-color: rgba(0,0,0,0.3);    /* color of the scroll thumb */
+    border-radius: 20px;       /* roundness of the scroll thumb */
+    /* border: 3px solid orange; */  /* creates padding around scroll thumb */
+}
+
 h1, h2, h3, h4, h5 {
     font-family: $secondary-font;
 } 
