--- a/static/css/styles05.css
+++ b/static/css/styles05.css
@@ -6,6 +6,26 @@
   font-family: "Poppins", sans-serif;
 }
 
+body::-webkit-scrollbar {
+  width: 6px;
+  /* width of the entire scrollbar */
+  position: relative;
+}
+
+body::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0.2);
+  /* color of the tracking area */
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.3);
+  /* color of the scroll thumb */
+  border-radius: 20px;
+  /* roundness of the scroll thumb */
+  /* border: 3px solid orange; */
+  /* creates padding around scroll thumb */
+}
+
 h1, h2, h3, h4, h5 {
   font-family: "Open Sans", sans-serif;
 }
